--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,7 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/.vs/Syrilium.Caching/v15/Server/sqlite3
+*.lock
+*.ide-shm
+*.ide-wal
