--- a/Syrilium.Common/Syrilium.Common.csproj
+++ b/Syrilium.Common/Syrilium.Common.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionHelper.cs" />
     <Compile Include="StringHelper.cs" />
+    <Compile Include="TSList.cs" />
+    <Compile Include="Valuent.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Syrilium.CommonInterface\Syrilium.CommonInterface.csproj">
