--- a/Syrilium.CommonInterface/Syrilium.CommonInterface.csproj
+++ b/Syrilium.CommonInterface/Syrilium.CommonInterface.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="IChecksumProvider.cs" />
+    <Compile Include="ISortable.cs" />
     <Compile Include="ObjectWrapper.cs" />
     <Compile Include="ReaderWriterLockWrapper.cs" />
     <Compile Include="Delegates.cs" />
